<?xml version="1.0" encoding="utf-8"?>

<resources> 

    <string name="app_name">DiaryTodo</string> 
    <string name="debug">
        <![CDATA["Attention! \nThis page is for debug only, \nand it is not safe. \nPlease don't pay with it!"]]>
    </string>
  	<!--Global functions name-->
	<string name="func_diary">Diary</string>
	<string name="func_todo">Todo</string>
	<string name="func_inspiration">Inspiration</string>
	<string name="func_one_article">OneArticle</string>
    <string name="func_markdown">Document</string>
	<string name="func_collection">Collection</string>
	<string name="func_logcat">LogCat</string>
    <string name="func_settings">Settings</string>
    <string name="func_backup">Backup</string>
    <string name="about">About</string>
    <string name="func_theme">Theme</string>
	<!--Main page strings-->
	<string name="menu_main_new">New</string>
	<string name="menu_main_sync">Sync</string>
 	<string name="menu_main_settings">Settings</string> 
  	<string name="menu_main_about">About</string>
  	<string name="menu_main_exit">Exit</string>
    <!--Main page labels-->
  	<string name="lab_focusing">Focusing</string>
	<string name="lab_functions">Functions</string>
	<!--Markdown page Bottom navigation bar-->
    <string name="text_recently">Recently</string>
    <string name="text_explorer">Explore</string>
    <string name="back_to_sdcard">Back to SDCard</string>

    <string name="menu_npd_undo">Undo</string>
    <string name="menu_npd_redo">Redo</string>
    <string name="menu_npd_save">Save</string>
    <string name="menu_npd_notsave">Cancel Edition</string>
    <string name="menu_npd_statistics">Statistics</string>
    <string name="menu_npd_export">Export and share...</string>
    <string name="menu_npd_asimage">As image</string>
    <string name="menu_npd_ashtml">As html</string>
    <string name="menu_npd_asmd">As Markdown</string>

    <string name="menu_diary_lockall">Lock all</string>
    <string name="menu_diary_unlockall">Unlock all</string>


    <string name="toast_ashtmlsuc">Have been saved to </string>
    <string name="toast_ashtmlfail">Sorry. Your device not supports this function.</string>
    <string name="toast_ashtmltry">Failed. Try again. </string>
    <string name="toast_saveexit">Saved. Press again to exit. </string>
    <string name="toast_permission_denied">Please check permission.</string>

    <!-- cancel and ok -->
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
	<string name="selectImg">Select Photo</string>

    <!-- editor toolbar dialog -->
    <string name="dialog_btn_insert">Insert</string>

    <!-- insert link -->
    <string name="dialog_title_insert_link">Insert link</string>
    <string name="dialog_et_hint_link_display_text">Display text (Default: Link)</string>
    <string name="dialog_et_hint_link_content">Link</string>

    <!-- insert image -->
    <string name="dialog_item_text_local_image">Local</string>
    <string name="dialog_item_text_internet_image">Internet</string>
    <string name="dialog_title_insert_image">Insert image</string>
    <string name="dialog_et_hint_image_display_text">Display text (Default: Image)</string>
    <string name="dialog_et_hint_image_uri">Image link</string>

    <!-- insert block code -->
    <string name="editor_dialog_title_insert_block_code">Insert block code</string>
    <string name="dialog_et_hint_language_name">Language</string>

    <!-- dialog toast -->
    <string name="toast_saved">Saved</string>
    <string name="toast_does_not_select">No image selected</string>
    <string name="toast_file_name_can_not_empty">File name can not be empty</string>
    <string name="toast_file_name_exists">The file name already exists. Please enter new name.</string>

    <!-- dialog insert table -->
    <string name="dialog_et_hint_table_rows">Rows</string>
    <string name="dialog_et_hint_table_cols">Column</string>
    <string name="dialog_title_insert_table">Insert table</string>

</resources>
