<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_npd_undo"
        app:showAsAction="always"
        android:icon="@drawable/ic_undo"
        android:title="@string/menu_npd_undo"/>
    
    <item
        android:id="@+id/menu_npd_redo"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_redo"
        android:title="@string/menu_npd_redo"/>
    <item
        android:id="@+id/menu_npd_save"
        app:showAsAction="always"
        android:icon="@drawable/ic_content_save"
        android:title="@string/menu_npd_save"/>

    <item
        android:id="@+id/menu_npd_export"
        app:showAsAction="never"
        android:title="@string/menu_npd_export">
        <menu>

            <item
                android:id="@+id/menu_npd_asimage"
                app:showAsAction="never"
                android:title="@string/menu_npd_asimage"/>
            <item
                android:id="@+id/menu_npd_ashtml"
                app:showAsAction="never"
                android:title="@string/menu_npd_ashtml"/>
            <item
                android:id="@+id/menu_npd_asmd"
                app:showAsAction="never"
                android:title="@string/menu_npd_asmd"/>
            
        </menu>
    </item>
</menu> 
